vfs_glusterfs: Samba VFS module for glusterfs
Implement a Samba VFS plugin for glusterfs based on gluster's gfapi.
This is a "bottom" vfs plugin (not something to be stacked on top of
another module), and translates (most) calls into closest actions
on gfapi.

This is an externally built module for v3-6 branch Samba.

Signed-off-by: Anand Avati <avati@redhat.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,7 @@
 CC		= @CC@
-CFLAGS		= @CFLAGS@
+CFLAGS		= @CFLAGS@ $(GLFS_CFLAGS)
 CPPFLAGS	= @CPPFLAGS@
-LDFLAGS		= @LDFLAGS@
+LDFLAGS		= @LDFLAGS@ $(GLFS_LDADD)
 LDSHFLAGS	= @LDSHFLAGS@
 INSTALLCMD	= @INSTALL@
 SAMBA_SOURCE	= @SAMBA_SOURCE@
